--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "some-tui",
+  "name": "bigtext-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "Interactive TUI for displaying text in big font with custom colors",
   "keywords": [],
   "homepage": "https://github.com/tknkaa/gh-garden#readme",
   "bugs": {
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "ink": "^6.7.0",
+    "ink-big-text": "^2.0.0",
+    "ink-text-input": "^6.0.0",
     "react": "^19.2.4"
   },
   "devDependencies": {
